--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
         </dependency>
 
 
+        <!-- Hibernate Dependency -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
+
+
+
+
+
+
     </dependencies>
 
 </project>
