--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,15 @@
             <version>1.2</version>
         </dependency>
 
+<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-core</artifactId>
+	<version>2.0.2</version>
+</dependency>
+
+
+
+
 
         <!-- USING THE FACEBOOK APIs-->
         <dependency>
@@ -114,6 +123,14 @@
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+
+<dependency>
+<groupId>org.springframework.security</groupId>
+<artifactId>spring-security-openid</artifactId>
+<version>3.1.0.RELEASE</version>
+</dependency>
+
 
 
         <!-- Dependency for Spring-Social-JPA implementation: https://github.com/michaellavelle/spring-social-hibernate-jpa -->
